--- a/index.html
+++ b/index.html
@@ -7,11 +7,168 @@
 
 </head>
 <body>
-    <div id="18e4be64d07f4f9cb591267261827979" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="2df12df5f5b24b93a2b807ec85bb3d10" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_18e4be64d07f4f9cb591267261827979 = echarts.init(
-            document.getElementById('18e4be64d07f4f9cb591267261827979'), 'white', {renderer: 'canvas'});
-        var option_18e4be64d07f4f9cb591267261827979 = {
+        var chart_2df12df5f5b24b93a2b807ec85bb3d10 = echarts.init(
+            document.getElementById('2df12df5f5b24b93a2b807ec85bb3d10'), 'white', {renderer: 'canvas'});
+        var option_2df12df5f5b24b93a2b807ec85bb3d10 = {
+    "animation": true,
+    "animationThreshold": 2000,
+    "animationDuration": 1000,
+    "animationEasing": "cubicOut",
+    "animationDelay": 0,
+    "animationDurationUpdate": 300,
+    "animationEasingUpdate": "cubicOut",
+    "animationDelayUpdate": 0,
+    "color": [
+        "#c23531",
+        "#2f4554",
+        "#61a0a8",
+        "#d48265",
+        "#749f83",
+        "#ca8622",
+        "#bda29a",
+        "#6e7074",
+        "#546570",
+        "#c4ccd3",
+        "#f05b72",
+        "#ef5b9c",
+        "#f47920",
+        "#905a3d",
+        "#fab27b",
+        "#2a5caa",
+        "#444693",
+        "#726930",
+        "#b2d235",
+        "#6d8346",
+        "#ac6767",
+        "#1d953f",
+        "#6950a1",
+        "#918597"
+    ],
+    "series": [
+        {
+            "type": "pie",
+            "clockwise": true,
+            "data": [
+                {
+                    "name": "lv0",
+                    "value": 2.4
+                },
+                {
+                    "name": "lv1",
+                    "value": 0.0
+                },
+                {
+                    "name": "lv2",
+                    "value": 6.4
+                },
+                {
+                    "name": "lv3",
+                    "value": 11.6
+                },
+                {
+                    "name": "lv4",
+                    "value": 24.0
+                },
+                {
+                    "name": "lv5",
+                    "value": 45.2
+                },
+                {
+                    "name": "lv6",
+                    "value": 10.4
+                }
+            ],
+            "radius": [
+                "30%",
+                "70%"
+            ],
+            "center": [
+                "55%",
+                "50%"
+            ],
+            "label": {
+                "show": true,
+                "position": "top",
+                "margin": 8,
+                "formatter": "{b}: {c}%"
+            },
+            "rippleEffect": {
+                "show": true,
+                "brushType": "stroke",
+                "scale": 2.5,
+                "period": 4
+            }
+        }
+    ],
+    "legend": [
+        {
+            "data": [
+                "lv0",
+                "lv1",
+                "lv2",
+                "lv3",
+                "lv4",
+                "lv5",
+                "lv6"
+            ],
+            "selected": {},
+            "show": true,
+            "left": "15%",
+            "top": "30%",
+            "orient": "vertical",
+            "padding": 5,
+            "itemGap": 10,
+            "itemWidth": 25,
+            "itemHeight": 14
+        }
+    ],
+    "tooltip": {
+        "show": true,
+        "trigger": "item",
+        "triggerOn": "mousemove|click",
+        "axisPointer": {
+            "type": "line"
+        },
+        "showContent": true,
+        "alwaysShowContent": false,
+        "showDelay": 0,
+        "hideDelay": 100,
+        "textStyle": {
+            "fontSize": 14
+        },
+        "borderWidth": 0,
+        "padding": 5
+    },
+    "title": [
+        {
+            "text": "\u671d\u8272\u6cdb\u8d77\u4e4b\u9645_ \u7c89\u4e1d\u7b49\u7ea7\u5360\u6bd4",
+            "subtext": "\u6700\u540e\u66f4\u65b0\u4e8e: 2021-10-22 16:20:42\n\nUID: 439916362   \u6837\u672c\u6570: 250",
+            "left": "15%",
+            "padding": 5,
+            "itemGap": 10
+        }
+    ]
+};
+        chart_2df12df5f5b24b93a2b807ec85bb3d10.setOption(option_2df12df5f5b24b93a2b807ec85bb3d10);
+    </script>
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Awesome-pyecharts</title>
+            <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
+
+</head>
+<body>
+    <div id="36ee1068ae534a8eb92fff391c64ec62" class="chart-container" style="width:900px; height:500px;"></div>
+    <script>
+        var chart_36ee1068ae534a8eb92fff391c64ec62 = echarts.init(
+            document.getElementById('36ee1068ae534a8eb92fff391c64ec62'), 'white', {renderer: 'canvas'});
+        var option_36ee1068ae534a8eb92fff391c64ec62 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -381,7 +538,7 @@
         }
     ]
 };
-        chart_18e4be64d07f4f9cb591267261827979.setOption(option_18e4be64d07f4f9cb591267261827979);
+        chart_36ee1068ae534a8eb92fff391c64ec62.setOption(option_36ee1068ae534a8eb92fff391c64ec62);
     </script>
 </body>
 </html>
